# Copyright 2021 the GLanguage authors. All rights reserved. MIT license.

[package]
name = "gl_runtime"
version = "0.1.0-alpha"
authors = ["JoseCarlosSkar <josecarlosskar@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Runtime GLanguage"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl_core = { path = "../gl-core", version = "0.1.0-alpha" }

num = "0.4.0"
libloading = "0.7.0"
downcast-rs = "1.2.0"
